[gd_scene load_steps=29 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://assets/2D Pixel Dungeon Asset Pack/character and tileset/Dungeon_Tileset.png" type="Texture" id=2]
[ext_resource path="res://assets/2D Pixel Dungeon Asset Pack/character and tileset/Dungeon_Character_2.png" type="Texture" id=3]

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=22]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=24]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=25]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=26]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=1]
0/name = "walls"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 160, 128 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 69, Vector2( 0, 1 ), 65, Vector2( 0, 2 ), 65, Vector2( 0, 3 ), 65, Vector2( 0, 4 ), 321, Vector2( 0, 5 ), 256, Vector2( 1, 0 ), 4, Vector2( 1, 4 ), 320, Vector2( 1, 5 ), 320, Vector2( 2, 0 ), 5, Vector2( 2, 4 ), 320, Vector2( 2, 5 ), 320, Vector2( 3, 0 ), 5, Vector2( 3, 4 ), 320, Vector2( 3, 5 ), 64, Vector2( 4, 0 ), 1, Vector2( 4, 4 ), 320, Vector2( 4, 5 ), 256, Vector2( 5, 0 ), 261, Vector2( 5, 1 ), 260, Vector2( 5, 2 ), 260, Vector2( 5, 3 ), 260, Vector2( 5, 4 ), 324, Vector2( 5, 5 ), 64, Vector2( 8, 7 ), 325 ]
0/autotile/icon_coordinate = Vector2( 0, 5 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 22 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 24 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 25 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 26 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "ground"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 160, 128 )
1/tile_mode = 1
1/autotile/bitmask_mode = 0
1/autotile/bitmask_flags = [ Vector2( 1, 1 ), 256, Vector2( 1, 2 ), 260, Vector2( 1, 3 ), 4, Vector2( 2, 1 ), 320, Vector2( 2, 2 ), 325, Vector2( 2, 3 ), 5, Vector2( 3, 1 ), 320, Vector2( 3, 2 ), 325, Vector2( 3, 3 ), 5, Vector2( 4, 1 ), 64, Vector2( 4, 2 ), 65, Vector2( 4, 3 ), 1, Vector2( 6, 0 ), 325, Vector2( 6, 1 ), 325, Vector2( 6, 2 ), 325, Vector2( 7, 0 ), 325, Vector2( 7, 1 ), 325, Vector2( 7, 2 ), 325, Vector2( 8, 0 ), 325, Vector2( 8, 1 ), 325, Vector2( 8, 2 ), 325, Vector2( 9, 0 ), 325, Vector2( 9, 1 ), 325, Vector2( 9, 2 ), 325 ]
1/autotile/icon_coordinate = Vector2( 2, 2 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "door1"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 96, 48, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "door2"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 112, 48, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0
4/name = "doordown"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 128, 48, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [  ]
4/z_index = 0
5/name = "chest"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 128, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [  ]
5/z_index = 0
6/name = "torch1"
6/texture = ExtResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 144, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shapes = [  ]
6/z_index = 0
7/name = "torch2"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 16, 144, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shapes = [  ]
7/z_index = 0
8/name = "darkness"
8/texture = ExtResource( 2 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 128, 112, 16, 16 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shapes = [  ]
8/z_index = 0

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMapWallsFloor" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 458788, 0, 327684, 458789, 0, 262147, 458790, 0, 262147, 458791, 0, 262145, 458792, 0, 262146, 458793, 0, 327685, 524324, 0, 196613, 524325, 0, 0, 524326, 0, 2, 524327, 0, 3, 524328, 0, 5, 524329, 0, 131072, 589847, 0, 327684, 589848, 0, 327681, 589849, 0, 262148, 589850, 0, 327682, 589851, 0, 262145, 589852, 0, 262147, 589853, 0, 262147, 589854, 0, 327682, 589855, 0, 262148, 589856, 0, 262147, 589857, 0, 262148, 589858, 0, 327681, 589859, 0, 262147, 589860, 0, 262149, 589861, 0, 196608, 589862, 1, 65537, 589863, 1, 65540, 589864, 0, 65541, 589865, 0, 262144, 589866, 0, 327681, 589867, 0, 262146, 589868, 0, 327682, 589869, 0, 327683, 655383, 0, 65541, 655384, 0, 0, 655385, 0, 2, 655386, 0, 3, 655387, 0, 2, 655388, 0, 2, 655389, 0, 3, 655390, 0, 2, 655391, 0, 3, 655392, 0, 3, 655393, 0, 3, 655394, 0, 3, 655395, 0, 2, 655396, 0, 5, 655397, 0, 65536, 655398, 1, 131073, 655399, 1, 131076, 655400, 0, 196613, 655401, 0, 458760, 655402, 0, 458760, 655403, 0, 458760, 655404, 0, 458760, 655405, 0, 196608, 720919, 0, 131077, 720920, 0, 65536, 720921, 1, 65537, 720922, 1, 65538, 720923, 1, 65539, 720924, 1, 65539, 720925, 1, 65539, 720926, 1, 65538, 720927, 1, 65538, 720928, 1, 65538, 720929, 1, 65538, 720930, 1, 65538, 720931, 1, 65540, 720932, 0, 131077, 720933, 0, 131072, 720934, 1, 131073, 720935, 1, 131076, 720936, 0, 196613, 720937, 0, 458760, 720938, 0, 458760, 720939, 0, 458760, 720940, 0, 458760, 720941, 0, 196608, 786455, 0, 65541, 786456, 0, 65536, 786457, 1, 131073, 786458, 1, 131075, 786459, 1, 131074, 786460, 1, 131075, 786461, 1, 131074, 786462, 1, 131075, 786463, 1, 131075, 786464, 1, 131074, 786465, 1, 131074, 786466, 1, 131075, 786467, 1, 131076, 786468, 0, 196613, 786469, 0, 196608, 786470, 1, 131073, 786471, 1, 131076, 786472, 0, 65541, 786473, 0, 458760, 786474, 0, 458760, 786475, 0, 458760, 786476, 0, 458760, 786477, 0, 65536, 851991, 0, 196613, 851992, 0, 196608, 851993, 1, 131073, 851994, 1, 131075, 851995, 1, 131074, 851996, 1, 131075, 851997, 1, 131075, 851998, 1, 131074, 851999, 1, 131074, 852000, 1, 131075, 852001, 1, 131075, 852002, 1, 131074, 852003, 1, 131076, 852004, 0, 196613, 852005, 0, 196608, 852006, 1, 131073, 852007, 1, 131076, 852008, 0, 196613, 852009, 0, 458760, 852010, 0, 458760, 852011, 0, 458760, 852012, 0, 458760, 852013, 0, 131072, 917527, 0, 65541, 917528, 0, 196608, 917529, 1, 196609, 917530, 1, 196610, 917531, 1, 196611, 917532, 1, 196610, 917533, 1, 131074, 917534, 1, 131074, 917535, 1, 196610, 917536, 1, 196611, 917537, 1, 196610, 917538, 1, 196611, 917539, 1, 196612, 917540, 0, 196613, 917541, 0, 65536, 917542, 1, 131073, 917543, 1, 131076, 917544, 0, 196613, 917545, 0, 458760, 917546, 0, 458760, 917547, 0, 458760, 917548, 0, 458760, 917549, 0, 131072, 983063, 0, 196613, 983064, 0, 262144, 983065, 0, 262148, 983066, 0, 262148, 983067, 0, 327681, 983068, 0, 327683, 983069, 1, 131073, 983070, 1, 131076, 983071, 0, 327680, 983072, 0, 327682, 983073, 0, 262147, 983074, 0, 327681, 983075, 0, 262148, 983076, 0, 262149, 983077, 0, 196608, 983078, 1, 131073, 983079, 1, 131076, 983080, 0, 196613, 983081, 0, 458760, 983082, 0, 458760, 983083, 0, 458760, 983084, 0, 458760, 983085, 0, 262144, 983086, 0, 262146, 983087, 0, 327685, 1048599, 0, 196613, 1048600, 0, 0, 1048601, 0, 3, 1048602, 0, 2, 1048603, 0, 2, 1048604, 0, 4, 1048605, 1, 131073, 1048606, 1, 131076, 1048607, 0, 1, 1048608, 0, 3, 1048609, 0, 3, 1048610, 0, 3, 1048611, 0, 3, 1048612, 0, 2, 1048613, 0, 4, 1048614, 1, 131073, 1048615, 1, 131076, 1048616, 0, 1, 1048617, 0, 3, 1048618, 0, 2, 1048619, 0, 2, 1048620, 0, 3, 1048621, 0, 3, 1048622, 0, 5, 1048623, 0, 65536, 1114135, 0, 196613, 1114136, 0, 65536, 1114137, 1, 65537, 1114138, 1, 65539, 1114139, 1, 65539, 1114140, 1, 65539, 1114141, 1, 131074, 1114142, 1, 131074, 1114143, 1, 65539, 1114144, 1, 65538, 1114145, 1, 65538, 1114146, 1, 65539, 1114147, 1, 65539, 1114148, 1, 65538, 1114149, 1, 65539, 1114150, 1, 131074, 1114151, 1, 131074, 1114152, 1, 65538, 1114153, 1, 65539, 1114154, 1, 65538, 1114155, 1, 65539, 1114156, 1, 65538, 1114157, 1, 65540, 1114158, 0, 131077, 1114159, 0, 65536, 1179671, 0, 131077, 1179672, 0, 65536, 1179673, 1, 196609, 1179674, 1, 196610, 1179675, 1, 196610, 1179676, 1, 196611, 1179677, 1, 196611, 1179678, 1, 196610, 1179679, 1, 196610, 1179680, 1, 196611, 1179681, 1, 196611, 1179682, 1, 196611, 1179683, 1, 196610, 1179684, 1, 131074, 1179685, 1, 131074, 1179686, 1, 196610, 1179687, 1, 196611, 1179688, 1, 196611, 1179689, 1, 196610, 1179690, 1, 196610, 1179691, 1, 196611, 1179692, 1, 196610, 1179693, 1, 196612, 1179694, 0, 131077, 1179695, 0, 65536, 1245207, 0, 196613, 1245208, 0, 262144, 1245209, 0, 262146, 1245210, 0, 262147, 1245211, 0, 327681, 1245212, 0, 262145, 1245213, 0, 262147, 1245214, 0, 262147, 1245215, 0, 327681, 1245216, 0, 262148, 1245217, 0, 327681, 1245218, 0, 262148, 1245219, 0, 327683, 1245220, 1, 131073, 1245221, 1, 131076, 1245222, 0, 327680, 1245223, 0, 262145, 1245224, 0, 262148, 1245225, 0, 327681, 1245226, 0, 327682, 1245227, 0, 262147, 1245228, 0, 262148, 1245229, 0, 262147, 1245230, 0, 262149, 1245231, 0, 65536, 1310743, 0, 1, 1310744, 0, 3, 1310745, 0, 2, 1310746, 0, 2, 1310747, 0, 3, 1310748, 0, 2, 1310749, 0, 2, 1310750, 0, 3, 1310751, 0, 5, 1310752, 0, 458760, 1310753, 0, 0, 1310754, 0, 3, 1310755, 0, 4, 1310756, 1, 131073, 1310757, 1, 131076, 1310758, 0, 1, 1310759, 0, 2, 1310760, 0, 5, 1310761, 0, 0, 1310762, 0, 3, 1310763, 0, 2, 1310764, 0, 5, 1310765, 0, 0, 1310766, 0, 2, 1310767, 0, 4, 1376287, 0, 65541, 1376288, 0, 0, 1376289, 0, 4, 1376290, 1, 65537, 1376291, 1, 65538, 1376292, 1, 131074, 1376293, 1, 131074, 1376294, 1, 65538, 1376295, 1, 65540, 1376296, 0, 1, 1376297, 0, 4, 1376298, 1, 65537, 1376299, 1, 65540, 1376300, 0, 65541, 1376301, 0, 65536, 1441823, 0, 196613, 1441824, 0, 131072, 1441825, 1, 65537, 1441826, 1, 131074, 1441827, 1, 131075, 1441828, 1, 131074, 1441829, 1, 131075, 1441830, 1, 131074, 1441831, 1, 131074, 1441832, 1, 65538, 1441833, 1, 65538, 1441834, 1, 131074, 1441835, 1, 131076, 1441836, 0, 65541, 1441837, 0, 196608, 1507359, 0, 196613, 1507360, 0, 131072, 1507361, 1, 131073, 1507362, 1, 131074, 1507363, 1, 196610, 1507364, 1, 196610, 1507365, 1, 131074, 1507366, 1, 131080, 1507367, 1, 131074, 1507368, 1, 196610, 1507369, 1, 196611, 1507370, 1, 131074, 1507371, 1, 131076, 1507372, 0, 65541, 1507373, 0, 196608, 1572895, 0, 131077, 1572896, 0, 196608, 1572897, 1, 196609, 1572898, 1, 196612, 1572899, 0, 327684, 1572900, 0, 327683, 1572901, 1, 196609, 1572902, 1, 196610, 1572903, 1, 196612, 1572904, 0, 327684, 1572905, 0, 327685, 1572906, 1, 196609, 1572907, 1, 196612, 1572908, 0, 65541, 1572909, 0, 131072, 1638431, 0, 131077, 1638432, 0, 262144, 1638433, 0, 262145, 1638434, 0, 262148, 1638435, 0, 262149, 1638436, 0, 262144, 1638437, 0, 327681, 1638438, 0, 327682, 1638439, 0, 262146, 1638440, 0, 262149, 1638441, 0, 262144, 1638442, 0, 262148, 1638443, 0, 327681, 1638444, 0, 262149, 1638445, 0, 131072, 1703967, 0, 1, 1703968, 0, 2, 1703969, 0, 2, 1703970, 0, 3, 1703971, 0, 3, 1703972, 0, 3, 1703973, 0, 2, 1703974, 0, 2, 1703975, 0, 3, 1703976, 0, 3, 1703977, 0, 3, 1703978, 0, 2, 1703979, 0, 3, 1703980, 0, 2, 1703981, 0, 4 )

[node name="TileMapOverlay" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 589833, 5, 0, 655388, 6, 0, 655391, 6, 0, 786464, 5, 0, 1048605, 2, 0, 1048606, 536870914, 0, 1048612, 6, 0, 1048617, 6, 0, 1114137, 7, 0, 1114157, 536870919, 0, 1310754, 6, 0, 1310759, 6, 0 )

[node name="Player" type="Sprite" parent="."]
position = Vector2( 464, 240 )
texture = ExtResource( 3 )
centered = false
vframes = 2
hframes = 7
region_rect = Rect2( 0, 0, 0, 16 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
smoothing_enabled = true

[node name="TileMapDarkness" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 458788, 0, 327684, 458789, 0, 262147, 458790, 0, 262147, 458791, 0, 262145, 458792, 0, 262146, 458793, 0, 327685, 524324, 0, 196613, 524325, 0, 0, 524326, 0, 2, 524327, 0, 3, 524328, 0, 5, 524329, 0, 131072, 589847, 0, 327684, 589848, 0, 327681, 589849, 0, 262148, 589850, 0, 327682, 589851, 0, 262145, 589852, 0, 262147, 589853, 0, 262147, 589854, 0, 327682, 589855, 0, 262148, 589856, 0, 262147, 589857, 0, 262148, 589858, 0, 327681, 589859, 0, 262147, 589860, 0, 262149, 589861, 0, 196608, 589862, 1, 65537, 589863, 1, 65540, 589864, 0, 65541, 589865, 0, 262144, 589866, 0, 327681, 589867, 0, 262146, 589868, 0, 327682, 589869, 0, 327683, 655383, 0, 65541, 655384, 0, 0, 655385, 0, 2, 655386, 0, 3, 655387, 0, 2, 655388, 0, 2, 655389, 0, 3, 655390, 0, 2, 655391, 0, 3, 655392, 0, 3, 655393, 0, 3, 655394, 0, 3, 655395, 0, 2, 655396, 0, 5, 655397, 0, 65536, 655398, 1, 131073, 655399, 1, 131076, 655400, 0, 196613, 655401, 0, 458760, 655402, 0, 458760, 655403, 0, 458760, 655404, 0, 458760, 655405, 0, 196608, 720919, 0, 131077, 720920, 0, 65536, 720921, 1, 65537, 720922, 1, 65538, 720923, 1, 65539, 720924, 1, 65539, 720925, 1, 65539, 720926, 1, 65538, 720927, 1, 65538, 720928, 1, 65538, 720929, 1, 65538, 720930, 1, 65538, 720931, 1, 65540, 720932, 0, 131077, 720933, 0, 131072, 720934, 1, 131073, 720935, 1, 131076, 720936, 0, 196613, 720937, 0, 458760, 720938, 0, 458760, 720939, 0, 458760, 720940, 0, 458760, 720941, 0, 196608, 786455, 0, 65541, 786456, 0, 65536, 786457, 1, 131073, 786458, 1, 131075, 786459, 1, 131074, 786460, 1, 131075, 786461, 1, 131074, 786462, 1, 131075, 786463, 1, 131075, 786464, 1, 131074, 786465, 1, 131074, 786466, 1, 131075, 786467, 1, 131076, 786468, 0, 196613, 786469, 0, 196608, 786470, 1, 131073, 786471, 1, 131076, 786472, 0, 65541, 786473, 0, 458760, 786474, 0, 458760, 786475, 0, 458760, 786476, 0, 458760, 786477, 0, 65536, 851991, 0, 196613, 851992, 0, 196608, 851993, 1, 131073, 851994, 1, 131075, 851995, 1, 131074, 851996, 1, 131075, 851997, 1, 131075, 851998, 1, 131074, 851999, 1, 131074, 852000, 1, 131075, 852001, 1, 131075, 852002, 1, 131074, 852003, 1, 131076, 852004, 0, 196613, 852005, 0, 196608, 852006, 1, 131073, 852007, 1, 131076, 852008, 0, 196613, 852009, 0, 458760, 852010, 0, 458760, 852011, 0, 458760, 852012, 0, 458760, 852013, 0, 131072, 917527, 0, 65541, 917528, 0, 196608, 917529, 1, 196609, 917530, 1, 196610, 917531, 1, 196611, 917532, 1, 196610, 917533, 1, 131074, 917534, 1, 131074, 917535, 1, 196610, 917536, 1, 196611, 917537, 1, 196610, 917538, 1, 196611, 917539, 1, 196612, 917540, 0, 196613, 917541, 0, 65536, 917542, 1, 131073, 917543, 1, 131076, 917544, 0, 196613, 917545, 0, 458760, 917546, 0, 458760, 917547, 0, 458760, 917548, 0, 458760, 917549, 0, 131072, 983063, 0, 196613, 983064, 0, 262144, 983065, 0, 262148, 983066, 0, 262148, 983067, 0, 327681, 983068, 0, 327683, 983069, 1, 131073, 983070, 1, 131076, 983071, 0, 327680, 983072, 0, 327682, 983073, 0, 262147, 983074, 0, 327681, 983075, 0, 262148, 983076, 0, 262149, 983077, 0, 196608, 983078, 1, 131073, 983079, 1, 131076, 983080, 0, 196613, 983081, 0, 458760, 983082, 0, 458760, 983083, 0, 458760, 983084, 0, 458760, 983085, 0, 262144, 983086, 0, 262146, 983087, 0, 327685, 1048599, 0, 196613, 1048600, 0, 0, 1048601, 0, 3, 1048602, 0, 2, 1048603, 0, 2, 1048604, 0, 4, 1048605, 1, 131073, 1048606, 1, 131076, 1048607, 0, 1, 1048608, 0, 3, 1048609, 0, 3, 1048610, 0, 3, 1048611, 0, 3, 1048612, 0, 2, 1048613, 0, 4, 1048614, 1, 131073, 1048615, 1, 131076, 1048616, 0, 1, 1048617, 0, 3, 1048618, 0, 2, 1048619, 0, 2, 1048620, 0, 3, 1048621, 0, 3, 1048622, 0, 5, 1048623, 0, 65536, 1114135, 0, 196613, 1114136, 0, 65536, 1114137, 1, 65537, 1114138, 1, 65539, 1114139, 1, 65539, 1114140, 1, 65539, 1114141, 1, 131074, 1114142, 1, 131074, 1114143, 1, 65539, 1114144, 1, 65538, 1114145, 1, 65538, 1114146, 1, 65539, 1114147, 1, 65539, 1114148, 1, 65538, 1114149, 1, 65539, 1114150, 1, 131074, 1114151, 1, 131074, 1114152, 1, 65538, 1114153, 1, 65539, 1114154, 1, 65538, 1114155, 1, 65539, 1114156, 1, 65538, 1114157, 1, 65540, 1114158, 0, 131077, 1114159, 0, 65536, 1179671, 0, 131077, 1179672, 0, 65536, 1179673, 1, 196609, 1179674, 1, 196610, 1179675, 1, 196610, 1179676, 1, 196611, 1179677, 1, 196611, 1179678, 1, 196610, 1179679, 1, 196610, 1179680, 1, 196611, 1179681, 1, 196611, 1179682, 1, 196611, 1179683, 1, 196610, 1179684, 1, 131074, 1179685, 1, 131074, 1179686, 1, 196610, 1179687, 1, 196611, 1179688, 1, 196611, 1179689, 1, 196610, 1179690, 1, 196610, 1179691, 1, 196611, 1179692, 1, 196610, 1179693, 1, 196612, 1179694, 0, 131077, 1179695, 0, 65536, 1245207, 0, 196613, 1245208, 0, 262144, 1245209, 0, 262146, 1245210, 0, 262147, 1245211, 0, 327681, 1245212, 0, 262145, 1245213, 0, 262147, 1245214, 0, 262147, 1245215, 0, 327681, 1245216, 0, 262148, 1245217, 0, 327681, 1245218, 0, 262148, 1245219, 0, 327683, 1245220, 1, 131073, 1245221, 1, 131076, 1245222, 0, 327680, 1245223, 0, 262145, 1245224, 0, 262148, 1245225, 0, 327681, 1245226, 0, 327682, 1245227, 0, 262147, 1245228, 0, 262148, 1245229, 0, 262147, 1245230, 0, 262149, 1245231, 0, 65536, 1310743, 0, 1, 1310744, 0, 3, 1310745, 0, 2, 1310746, 0, 2, 1310747, 0, 3, 1310748, 0, 2, 1310749, 0, 2, 1310750, 0, 3, 1310751, 0, 5, 1310752, 0, 458760, 1310753, 0, 0, 1310754, 0, 3, 1310755, 0, 4, 1310756, 1, 131073, 1310757, 1, 131076, 1310758, 0, 1, 1310759, 0, 2, 1310760, 0, 5, 1310761, 0, 0, 1310762, 0, 3, 1310763, 0, 2, 1310764, 0, 5, 1310765, 0, 0, 1310766, 0, 2, 1310767, 0, 4, 1376287, 0, 65541, 1376288, 0, 0, 1376289, 0, 4, 1376290, 1, 65537, 1376291, 1, 65538, 1376292, 1, 131074, 1376293, 1, 131074, 1376294, 1, 65538, 1376295, 1, 65540, 1376296, 0, 1, 1376297, 0, 4, 1376298, 1, 65537, 1376299, 1, 65540, 1376300, 0, 65541, 1376301, 0, 65536, 1441823, 0, 196613, 1441824, 0, 131072, 1441825, 1, 65537, 1441826, 1, 131074, 1441827, 1, 131075, 1441828, 1, 131074, 1441829, 1, 131075, 1441830, 1, 131074, 1441831, 1, 131074, 1441832, 1, 65538, 1441833, 1, 65538, 1441834, 1, 131074, 1441835, 1, 131076, 1441836, 0, 65541, 1441837, 0, 196608, 1507359, 0, 196613, 1507360, 0, 131072, 1507361, 1, 131073, 1507362, 1, 131074, 1507363, 1, 196610, 1507364, 1, 196610, 1507365, 1, 131074, 1507366, 1, 131080, 1507367, 1, 131074, 1507368, 1, 196610, 1507369, 1, 196611, 1507370, 1, 131074, 1507371, 1, 131076, 1507372, 0, 65541, 1507373, 0, 196608, 1572895, 0, 131077, 1572896, 0, 196608, 1572897, 1, 196609, 1572898, 1, 196612, 1572899, 0, 327684, 1572900, 0, 327683, 1572901, 1, 196609, 1572902, 1, 196610, 1572903, 1, 196612, 1572904, 0, 327684, 1572905, 0, 327685, 1572906, 1, 196609, 1572907, 1, 196612, 1572908, 0, 65541, 1572909, 0, 131072, 1638431, 0, 131077, 1638432, 0, 262144, 1638433, 0, 262145, 1638434, 0, 262148, 1638435, 0, 262149, 1638436, 0, 262144, 1638437, 0, 327681, 1638438, 0, 327682, 1638439, 0, 262146, 1638440, 0, 262149, 1638441, 0, 262144, 1638442, 0, 262148, 1638443, 0, 327681, 1638444, 0, 262149, 1638445, 0, 131072, 1703967, 0, 1, 1703968, 0, 2, 1703969, 0, 2, 1703970, 0, 3, 1703971, 0, 3, 1703972, 0, 3, 1703973, 0, 2, 1703974, 0, 2, 1703975, 0, 3, 1703976, 0, 3, 1703977, 0, 3, 1703978, 0, 2, 1703979, 0, 3, 1703980, 0, 2, 1703981, 0, 4 )

[node name="DebugLine" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 10, 10 )
width = 1.0
texture_mode = 45

[node name="DebugLine2" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 10, 10 )
width = 1.0
default_color = Color( 1, 0.4, 0.4, 1 )
texture_mode = 45
